Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35710

cluster node hangs during shutdown if threadpool is used

    XMLWordPrintable

Details

    Description

      with configuration of:

      thread_handling = pool-of-threads

      a cluster node may remain hanging during last steps of handling normal shutdown.
      There must be active connections in the node, while shutdown is started, and the shutdown operator apparently believes that there are still active connections, although all connections have been closed already.

      Attachments

        Issue Links

          Activity

            People

              sysprg Julius Goryavsky (Inactive)
              seppo Seppo Jaakola
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 2d Original Estimate - 2d
                  2d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2d 3h
                  2d 3h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.