MDEV-35710 support for threadpool

When client connections use threadpool, i.e. configuration has:
thread_handling = pool-of-threads
it turned out that during wsrep replication shutdown, not
all client connections could be closed. Reason was that some client
threads has stmt_da in state DA_EOF, and this state was earlier used
to detect if client connection was issuing SHUTDOWN command.

To fix this, the connection executing SHUTDOWN is now detected by
looking at the actual command being executed:
thd->get_command() == COM_SHUTDOWN
During replication shutdown, all other connections but the SHUTDOWN
executor, are terminated.

This commit has new mtr test galera.galera_threadpool, which
opens a number of threadpool client connections, and then
restarts the node to verify that connections in threadpool are
terminated during shutdown.